add needed js for index.html

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,5 +4,6 @@ file.reference.IlliadWeb-config=config
 file.reference.IlliadWeb-public_html=public_html
 file.reference.IlliadWeb-test=test
 files.encoding=UTF-8
+project.license=default
 site.root.folder=${file.reference.IlliadWeb-public_html}
 test.folder=${file.reference.IlliadWeb-test}
